<resources>
    <string name="app_name" translatable="false">Hanheld POS</string>
    <string name="alert_msg_an_error_has_occurred" translatable="false">An error has occurred. Please try again</string>
    <string name="alert_btn_positive" translatable="false">Agree</string>
    <string name="alert_btn_negative" translatable="false">Cancel</string>
    <string name="alert_btn_go_to_settings" translatable="false">Open Settings</string>
    <string name="alert_msg_feature_is_temporary_close" translatable="false">The function is temporarily closed</string>
    <string name="device_code" translatable="false">Device Code</string>
    <string name="run_and_grow_your_business" translatable="false">Run and grow your business</string>
    <string name="get_started" translatable="false">Get Started</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="enter_passcode" translatable="false">Enter Passcode</string>
    <string name="table" translatable="false">Table</string>
    <string name="order" translatable="false">Order</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="diadiem_point_of_sale" translatable="false">Diadiem Point of Sale</string>
    <string name="SizeOption">CHOOSE SIZE</string>
    <string name="RequiredOption">HOW DO YOU WANT TO COOK?</string>
    <string name="OptionalOption">WHICH KIND OF SAUCE YOU WOULD LIKE TO?</string>
    <string name="ExtraOption">EXTRA</string>
    <string name="SpecialInstructions">Special Instructions</string>
    <string name="Optional">Optional</string>
    <string name="FoodDescription">Tomato sauce, Fresh mozzarella, sun dried tomato and basil.</string>
    <string name="ExtraDescription">Trung them</string>
    <string name="ExtraDescription1">Thit bo them</string>
    <string name="NoteHint">E.g No onions, cheese</string>
    <string name="Option">Option</string>
    <string name="ExtraName">Extra Name</string>
    <string name="ExtraPrice">Extra Price</string>
    <string name="AddCart">ADD</string>
    <string name="delete">Delete</string>
    <string name="cart">Cart</string>
    <string name="no_shipping_info">No shipping info, please add customer or shipping info</string>
    <string name="add_customer">Add Customer</string>
    <string name="customer_info">Customer Info</string>
    <string name="special_instruction_for_order">Special Instruction for Order</string>
    <string name="items">Item(s)</string>
    <string name="item">Item</string>
    <string name="payment_method">Payment Method</string>
    <string name="view_details">View Details</string>
    <string name="asap_20_mins">ASAP (20 mins)</string>
    <string name="door_to_door">Door-to-Door</string>
    <string name="plastic_cutlery">Plastic cutlery</string>
    <string name="hide_details">Hide Details</string>
    <string name="add_discount">Add Discount</string>
    <string name="item_discount">ITEM DISCOUNT</string>
    <string name="order_discount">ORDER DISCOUNT</string>
    <string name="amount">Amount</string>
    <string name="title">Title</string>
    <string name="required">Required</string>
    <string name="percentage">Percentage</string>
    <string name="reason_for_comp">REASON FOR COMP</string>
    <string name="remove_comp">Remove Comp</string>
    <string name="dining_option">Dining option</string>
    <string name="bill">Bill</string>
    <string name="search_customer">Search Customer</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="contract_information">Contract Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="company_optional">Company (Optional)</string>
    <string name="reference_id_optional">Reference ID (Optional)</string>
    <string name="id_card_optional">ID Card (Optional)</string>
    <string name="address_type">Address Type</string>
    <string name="house_number_street_name">House Number, Street Name</string>
    <string name="floor_name_room_number_optional">Floor Name, Room Number (Optional)</string>
    <string name="district">District</string>
    <string name="ward">Ward</string>
    <string name="set_as_default">Set as default</string>
    <string name="save">Save</string>
    <string name="description_device_code">Device Codes are created in Dashboard for each new device, allowing you to sign in without ever sharing your email and password</string>
    <string name="there_was_not_found">There was not found</string>
    <string name="failed_to_load_data">Failed to load data</string>
    <string name="apply_to">Apply to</string>
    <string name="current_drawer">Current Drawer</string>
    <string name="start_drawer">Start Drawer</string>
    <string name="staring_cash">Staring cash</string>
    <string name="device_codes_are_created_in_dashboard_for_each_new_device_allowing_you_to_sign_in_without_ever_sharing_your_email_and_password">Device Codes are created in Dashboard for each new device, allowing you to sign in without ever sharing your email and password</string>
    <string name="drawer_started">Drawer Started</string>
    <string name="drawer_ended">Drawer Ended</string>
    <string name="close_app">Close App</string>
    <string name="new_drawer">New Drawer</string>
    <string name="please_choose_an_item">Please choose an item.</string>
    <string name="discount_code">Discount Code</string>
    <string name="search">Search</string>
    <string name="orders">Orders</string>
    <string name="transactions">Transactions</string>
    <string name="reports">Reports</string>
    <string name="customer">Customer</string>
    <string name="order_history">Order History</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="logout_device">Logout Device</string>
    <string name="reset_system">Reset System</string>
    <string name="are_you_sure_you_want_to_exit_this_account">Are you sure you want to exit this account?</string>
    <string name="logout">Logout</string>
    <string name="check_out">Check Out</string>
    <string name="are_you_sure_you_want_to_exit_this_employee">Are you sure you want to exit this employee?</string>
    <string name="sales_report">Sales Report</string>
    <string name="enter_description">Enter Description</string>
    <string name="started">Started</string>
    <string name="starting_cash">Starting Cash</string>
    <string name="paid_in_out">Paid In/Out</string>
    <string name="cash_sales">Cash Sales</string>
    <string name="cash_refunds">Cash Refunds</string>
    <string name="expected_in_drawer">Expected In Drawer</string>
    <string name="pay_in">Pay In</string>
    <string name="pay_out">Pay Out</string>
    <string name="end_drawer">End Drawer</string>
    <string name="pay_in_out">Pay In/Out</string>
    <string name="drawer_description">Drawer Description</string>
    <string name="description">Description</string>
    <string name="actual_amount">Actual Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="total_paid_in_out">Total Paid In/Out</string>
    <string name="material_calendar_monday">Mo</string>
    <string name="material_calendar_tuesday">Tu</string>
    <string name="material_calendar_wednesday">We</string>
    <string name="material_calendar_thursday">Th</string>
    <string name="material_calendar_friday">Fr</string>
    <string name="material_calendar_saturday">Sa</string>
    <string name="material_calendar_sunday">Su</string>
    <string name="material_calendar_jan">Jan</string>
    <string name="material_calendar_feb">Feb</string>
    <string name="material_calendar_march">March</string>
    <string name="material_calendar_april">April</string>
    <string name="material_calendar_may">May</string>
    <string name="material_calendar_june">June</string>
    <string name="material_calendar_july">July</string>
    <string name="material_calendar_aug">Aug</string>
    <string name="material_calendar_sept">Sept</string>
    <string name="material_calendar_oct">Oct</string>
    <string name="material_calendar_nov">Nov</string>
    <string name="material_calendar_dec">Dec</string>
    <string name="drawer">Drawer</string>
    <string name="all_device">All Device</string>
    <string name="this_device_only">This Device only</string>
    <string name="all_day">All Day</string>
    <string name="start">Start</string>
    <string-array name="weekDayLabels">
        <item>@string/material_calendar_monday</item>
        <item>@string/material_calendar_tuesday</item>
        <item>@string/material_calendar_wednesday</item>
        <item>@string/material_calendar_thursday</item>
        <item>@string/material_calendar_friday</item>
        <item>@string/material_calendar_saturday</item>
        <item>@string/material_calendar_sunday</item>
    </string-array>
    <string-array name="monthLabels">
        <item>@string/material_calendar_jan</item>
        <item>@string/material_calendar_feb</item>
        <item>@string/material_calendar_march</item>
        <item>@string/material_calendar_april</item>
        <item>@string/material_calendar_may</item>
        <item>@string/material_calendar_june</item>
        <item>@string/material_calendar_july</item>
        <item>@string/material_calendar_aug</item>
        <item>@string/material_calendar_sept</item>
        <item>@string/material_calendar_oct</item>
        <item>@string/material_calendar_nov</item>
        <item>@string/material_calendar_dec</item>
    </string-array>
    <string name="notification">Notification</string>
    <string name="please_choose_payment_method">Please choose payment method</string>
    <string name="order_not_completed">Order not completed!</string>
    <string name="difference">Difference</string>
    <string name="please_sync_local_data_before_ending_this_cash_drawer">Please sync local data before ending this cash drawer</string>
    <string name="remove_customer">Remove Customer</string>
    <string name="personal_info">Personal Info</string>
    <string name="phone_number">Phone Number</string>
    <string name="customer_id">Customer ID</string>
    <string name="member_since">Member Since</string>
    <string name="loyalty_points">Loyalty Points</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="gift_card_transactions">Gift Card Transactions</string>
    <string name="address_info">Address Info</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="overview">Overview</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="dining_options">Dining Options</string>
    <string name="section_sales">Section Sales</string>
    <string name="qty">Qty</string>
    <string name="cover">Cover</string>
    <string name="service_charge">Service Charge</string>
    <string name="discount_comp"><![CDATA[Discount & Comp]]></string>
    <string name="refund">Refund</string>
    <string name="taxes">Taxes</string>
    <string name="service_fee">Service Fee</string>
    <string name="surcharge">Surcharge</string>
    <string name="total_sales">Total Sales</string>
    <string name="bill_count">Bill Count</string>
    <string name="bill_average">Bill Average</string>
    <string name="gross">(Gross)</string>
    <string name="net">(Net)</string>
    <string name="please_sync_local_data_before_logging_out_of_this_account">Please sync local data before logging out of this account!</string>
    <string name="optional">Optional</string>
    <string name="clear_discount">Clear Discount</string>
    <string name="show_detail">Show detail</string>
</resources>