<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="viewModel"
            type="com.hanheldpos.ui.screens.discount.discount_type.percentage.DiscountPercentageVM" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_9sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">
            <com.diadiem.pos_components.PTextView
                android:id="@+id/btnClearDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_discount"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginEnd="@dimen/_9sdp"
                android:layout_marginBottom="@dimen/_14sdp"
                app:useFontStyle="normal"
                app:useTextColor="color8"
                app:useTextHeader="h6" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_outline_round"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_5sdp">

                <com.diadiem.pos_components.PTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percentage"
                    app:useFontStyle="normal"
                    app:useTextColor="color4"
                    app:useTextHeader="h6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:orientation="horizontal">

                    <com.diadiem.pos_components.PTextInputEditText
                        android:id="@+id/percentDiscount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:digits="0123456789"
                        android:imeOptions="actionDone"
                        android:focusableInTouchMode="true"
                        android:hint="@{`0%`}"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.percent}"
                        android:textColorHint="@color/color_4"
                        app:ipt_useFontStyle="normal"
                        app:ipt_useTextColor="color4"
                        app:ipt_useTextHeader="h5" />

                    <com.diadiem.pos_components.PTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/required"
                        app:useFontStyle="normal"
                        app:useTextColor="color6"
                        app:useTextHeader="h7" />
                </LinearLayout>

            </LinearLayout>

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_8sdp" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.diadiem.pos_components.PTextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_outline_round"
                    android:focusableInTouchMode="true"
                    android:hint="@string/title"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="@={viewModel.title}"
                    android:textColorHint="@color/color_4"
                    app:ipt_useFontStyle="normal"
                    app:ipt_useTextColor="color4"
                    app:ipt_useTextHeader="h5" />
                <com.diadiem.pos_components.PTextView
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_gravity="bottom|end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/optional"
                    app:useFontStyle="normal"
                    app:useTextHeader="h7"
                    app:useTextColor="color6"/>
            </FrameLayout>

        </LinearLayout>
    </RelativeLayout>
</layout>