<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hanheldpos.ui.screens.menu.report.sale.menu.overview.SaleOverviewVM" />
    </data>

    <LinearLayout
        style="@style/RootLayout"
        android:paddingVertical="@dimen/_13sdp">


        <LinearLayout
            android:paddingHorizontal="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.diadiem.pos_components.PTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                app:useFontStyle="bold"
                app:useTextColor="color4"
                app:useTextHeader="h4" />

            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.diadiem.pos_components.PTextView
                android:id="@+id/btnShowDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/show_detail"
                app:useTextColor="color0"
                app:useTextHeader="h5" />
        </LinearLayout>

        <FrameLayout
            android:layout_marginVertical="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:paddingHorizontal="@dimen/_8sdp"
                android:id="@+id/consum"
                visibleObject="@{!viewModel.isShowDetail()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:itemCount="6"
                tools:listitem="@layout/item_sale_report" />

            <LinearLayout
                visibleObject="@{viewModel.isShowDetail()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:background="@color/color_11"
                    android:paddingVertical="@dimen/_10sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.diadiem.pos_components.PTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:useFontStyle="bold"
                        app:useTextColor="color4"
                        app:useTextHeader="h5"
                        android:text="@string/name"
                        />
                    <com.diadiem.pos_components.PTextView
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:useFontStyle="bold"
                        app:useTextColor="color4"
                        app:useTextHeader="h5"
                        android:text="@string/qty"
                        />
                    <com.diadiem.pos_components.PTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:useFontStyle="bold"
                        app:useTextColor="color4"
                        app:useTextHeader="h5"
                        android:text="@string/amount"
                        />
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:id="@+id/detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="6"
                    tools:listitem="@layout/item_sale_report" />
            </LinearLayout>

        </FrameLayout>

    </LinearLayout>
</layout>